fixed recent server list grid spacing on desktop

--- a/styles/layout/Navbar.module.scss
+++ b/styles/layout/Navbar.module.scss
@@ -41,17 +41,45 @@
         }
     
             .tab_button {
+                line-height: 45px;
                 height: 45px;
                 margin-bottom: 5px;
-                padding: 7.5px 10px;
+                padding: 0px 10px;
                 font-size: 24px;
+                font-weight: bold;
+                color: $tertiary;
                 background-color: $primary;
                 border-bottom-left-radius: 5px;
                 border-bottom-right-radius: 5px;
+                border-right: 2px solid $tertiary;
+                border-bottom: 2px solid $tertiary;
             }
             .tab_button:hover {
-                background-color: $secondary;
-                color: $light;
+                background-color: $tertiary;
+                color: $primary;
+                border-right: 2px solid $primary;
+                border-bottom: 2px solid $primary;
+            }
+
+            .tab_active {
+                line-height: 45px;
+                height: 45px;
+                margin-bottom: 5px;
+                padding: 0px 10px;
+                font-size: 24px;
+                font-weight: bold;
+                color: $primary;
+                background-color: $tertiary;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                border-right: 2px solid $primary;
+                border-bottom: 2px solid $primary;
+            }
+            .tab_active:hover {
+                background-color: $primary;
+                color: $tertiary;
+                border-right: 2px solid $tertiary;
+                border-bottom: 2px solid $tertiary;
             }
 
 
