--- a/theme/_colors.scss
+++ b/theme/_colors.scss
@@ -10,6 +10,7 @@ $dark: #1e2020;
 
 $primary: #ce422b; // olive-2
 $secondary: #b93b27; // olive-2
+$tertiary: #762519;
 
 
 $highlight: #FBB13C;
